--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "draft-js": "^0.11.7",
+    "firebase": "^9.19.1",
     "moment": "^2.29.4",
     "next": "13.2.4",
     "quill": "^1.3.7",
